--- a/package.json
+++ b/package.json
@@ -10,23 +10,58 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "i18next": "^23.7.8",
+    "immer": "^10.0.3",
+    "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-i18next": "^13.5.0",
+    "react-native": "0.73.0",
+    "react-native-config": "^1.5.1",
+    "react-native-device-info": "^10.12.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-localize": "^3.0.4",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^5.11.3",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.23.5",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
-    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/eslint-config": "^0.74.0",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
